@@ -1,6 +1,6 @@
 True Type Font File Dumper: v 0.5.5
 Copyright 1996-1998 ollie@ms1.hinet.net
-Dumping File:(null)
+Dumping File:test.ttc:0
 
 
 TrueType Collection Header
